# twonum.org

./: .env.ci  .env.dist  .gitignore  COPYING  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-nest.yml  django.yml  main_twonumorg.yml
about/: admin.py  apps.py  models.py  urls.py  views.py
about/migrations/: 0001_initial.py  0002_alter_timemachine_hits.py
core/: serializers.py  views.py
core/templatetags/: markdown_extras.py
doublefloat/: admin.py  apps.py  feeds.py  models.py  sitemaps.py  urls.py  views.py
doublefloat/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_desc.py  0003_alter_category_desc_alter_post_categories.py  0004_alter_post_slug.py  0005_alter_category_slug.py
home/: urls.py  views.py
projects/: admin.py  feeds.py  models.py  sitemaps.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_date.py  0003_project_allow_comments.py  0004_project_doublefloat_category.py  0005_alter_project_doublefloat_category.py
pronums/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
pronums/migrations/: 0001_initial.py  0002_pronum_quote_alter_pronum_text.py  0003_alter_pronum_quote.py  0004_pronum_link_text_pronum_link_url.py
static/: 204hsts.txt  canary.asc
static/css/: about.css  base.css  doublefloat.css  home.css  pronums.css  view-post.css
static/js/: masonry.js
static/licenses/: agplv3.html  cc-by-sa-4.0.html  style.css
static/martor/: martor.css
templates/: base.html  robots.txt
templates/about/: about.html
templates/comments/: preview.html
templates/core/: comments.html  pagination.html
templates/django_comments_xtd/: base.html  (+2 more)
twonumorg/: __init__.py  api_urls.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
(+14 files in other folders)
